--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "ai-photo-critic",
+  "name": "photomemory-vault",
   "version": "0.1.0",
   "private": false,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:migrate": "tsx scripts/migrate.ts"
   },
   "dependencies": {
-    "@langchain/community": "^0.3.51",
     "@langchain/openai": "^0.6.7",
-    "@langchain/pinecone": "^0.2.0",
-    "@pinecone-database/pinecone": "^5.1.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@upstash/ratelimit": "^2.0.6",
-    "@upstash/redis": "^1.35.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.6.1",
@@ -24,11 +20,11 @@
     "langchain": "^0.3.30",
     "lucide-react": "^0.539.0",
     "next": "15.5.9",
-    "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.1.1",
     "react-markdown": "^8.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "pg": "^8.11.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -40,6 +36,7 @@
     "eslint-config-next": "15.5.7",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.7",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "tsx": "^4.21.0"
   }
 }
